<resources>
    <string name="app_name">Mellow Alarm</string>

    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>

    <string name="delete">Delete</string>

    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>

    <string name="upcoming_alarm_notification_channel_name">☕ Upcoming alarm</string>
    <string name="upcoming_alarm_channel_description">😼 Kindly reminder about upcoming alarm</string>
    <string name="upcoming_alarm_notification_title">☕️ Upcoming alarm</string>
    <string name="upcoming_alarm_notification_message">Cancel upcoming alarm at %1$tH:%1$tM</string>
    <string name="upcoming_alarm_canceled_toast">Upcoming alarm at %1$tH:%1$tM canceled</string>

    <string name="time_to_sleep_channel_name">🛏 Time to sleep</string>
    <string name="time_to_sleep_channel_description" translatable="false">Kindly reminder about upcoming morning alarm when not much sleep time remain</string>
    <string name="time_to_sleep_notification_title">🛏 Time to sleep</string>
    <string name="time_to_sleep_notification_message" comment="It\'s only %1$tH hour(s) %1$tM minute(s) until your morning alarm. Tap to open the Sleep Assistant.">It\'s only %s %s until your morning alarm. Tap to open the Sleep Assistant.</string>

    <string name="buzzer_channel_description" translatable="false">Alarm Signal</string>
    <string name="buzzer_channel_name" translatable="false">Mellow Alarm Buzzer</string>
    <string name="sleep_assistant">Sleep Assistant</string>
    <string name="sleep_assistant_media_channel_name">Sleep Assistant</string>
    <string name="sleep_assistant_media_channel_description" translatable="false">Display media information when sleep assistant is active</string>

    <string name="alarm_time" translatable="false">%1$02d:%2$02d</string>
    <string name="alarm_time_chunk" translatable="false">%1$02d</string>
    <string name="sleep_timer">Snooze %1$tM:%1$tS</string>
    <string name="work_days">Weekdays</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="single_day" translatable="false">%1$td.%1$tm.%1$tY</string>

    <string name="next_alarm_date_time">%1$tA, %1$tB %1$td, %1$tY, %1$tR</string>
    <string name="next_alarm_date">%1$tA, %1$tB %1$td, %1$tY</string>
    <string name="clear_logs" translatable="false">Clear Logs</string>
    <string name="add">Add</string>
    <string name="time">Time</string>

    <string name="volume">Volume</string>
    <string name="volume_percent">%d%%</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="noises">Noises</string>
    <string name="url_address_prompt">Radio station URL address</string>
    <string name="url_title_prompt">Radio station title</string>
    <string name="url_invalid_warning">URL is not valid</string>
    <string name="local_audio">Local audio</string>
    <string name="internet_streams">Internet streams</string>
    <string name="can_not_stream">ERROR: Can\'t play media!</string>
    <string name="image_button" translatable="false">Design element</string>
    <string name="alarms">Alarms</string>
    <string name="open_sleep_assistant" translatable="false">Open Sleep Assistant</string>

    <string name="skip_1_day">Skip next 1</string>
    <string name="skip_2_day">Skip next 2</string>
    <string name="skip_3_day">Skip next 3</string>
    <string name="skip_4_day">Skip next 4</string>
    <string name="skip_5_day">Skip next 5</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_on">Turn on</string>
    <string name="snooze_3_min">3 min snooze</string>
    <string name="snooze_5_min">5 min snooze</string>
    <string name="snooze_2_min">2 min snooze</string>
    <string name="date">Date</string>
    <string name="message">Message</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="default_sound">Default</string>
    <string name="switch_alarm_state">Switch alarm state</string>
    <string name="show_heads_up_notification">Show one hour heads up notification</string>
    <string name="gradually_increase_volume">Gradually increase volume</string>
    <string name="show_time_to_sleep_notification">Show time to sleep notification</string>
    <string name="patreon_link" translatable="false">https://www.patreon.com/mecong</string>
    <string name="back">Back</string>
    <string name="low_sound">Knock</string>
    <string name="high_sound">Clink</string>
    <string name="if_you_have_comments_or_ideas_please_visit_my_page">If you have comments or ideas please visit my page:</string>
    <string name="rate_it_prompt">I would very appreciate if you could rate Mellow Alarm at Google Play:</string>
    <string name="rate_it">Rate</string>
    <string name="share_it_prompt">You can share Mellow Alarm with whom, in your opinion, this may be useful:</string>
    <string name="share_it">Share</string>
    <string name="radios">Radios</string>
    <string name="about">About</string>
    <string name="all_rights_on_radio_stations_belongs_to_their_owners">All rights on radio stations belong to their owners:</string>
    <string name="http_enigmatic_su" translatable="false">http://enigmatic.su/</string>
    <string name="https_mynoise_net" translatable="false">https://mynoise.net/</string>
    <string name="https_www_milanolounge_net" translatable="false">https://www.milanolounge.net/</string>
    <string name="https_www_hionline_eu" translatable="false">https://www.hionline.eu/</string>
    <string name="http_jr_fm" translatable="false">http://jr.fm/</string>
    <string name="close">Close</string>
    <string name="empty_playlist_name_warning">Playlist name should not be empty</string>
    <string name="alarm_ringing">⏰ Alarm is ringing</string>
    <string name="playlist_def_name">Playlist %d</string>
    <string name="stop">STOP</string>
    <string name="playlist_title" translatable="false">[%s]</string>

    <string name="Ocean_noise">Ocean noise</string>
    <string name="Campfire_noise">Campfire noise</string>
    <string name="River_noise">River noise</string>
    <string name="Rain_noise">Rain noise</string>
    <string name="Garden_noise">Garden noise</string>
    <string name="Clock_noise">Clock noise</string>
    <string name="Thunder_noise_3">Thunder noise</string>
    <string name="Crickets_noise">Crickets noise</string>
    <string name="Frogs_noise">Frogs noise</string>
    <string name="Insects_noise">Insects noise</string>
    <string name="White_noise">White noise</string>

    <string name="dialog_autostart">Please turn on AutoStart option for \"%s\" for the correct operation of the application</string>
    <string name="open_autostart">Open AutoStart Dialog</string>
    <string name="cant_open_autostart">Can\'t open AutoStart. Please turn on manually.</string>

    <string name="ticks_type_label">Soft alarm sound type</string>
    <string name="alarm_complexity">Alarm complexity: %d</string>
    <string name="all_alarms_are_off">All alarms are off</string>
    <string name="your_alarms">Your Alarms</string>
    <string name="next_alarm_soon">Alarm will go off soon</string>
    <string name="next_alarm_today" comment="Alarm in %d h %02d m">Alarm in %s %s</string>

    <string name="first_alarm_prompt">Add your first alarm!</string>
    <string name="app_share_text">Mellow Alarm Clock - to have a good sleep!\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="if_alarms_do_not_fire_you_need_to_add_mellow_alarm_to_autostart">If alarms do not fire you need to add Mellow Alarm to Autostart:</string>

    <string name="system_volume_toast">System volume set to 5%</string>
    <string name="vibrate_with_alarm">Vibrate with alarm</string>

    <string name="play_time" translatable="false">%02d:%02d</string>
    <string name="play_time_with_hour" translatable="false">%d:%02d:%02d</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_mode_on">Shuffle on</string>
    <string name="shuffle_mode_off">Shuffle off</string>
    <string name="select_audio_files">Select Audio Files</string>


    <string-array name="ticks_type_array">
        <item>@string/low_sound</item>
        <item>@string/high_sound</item>
    </string-array>

    <plurals name="ticks_label">
        <item quantity="one">Soft alarm %d minute before</item>
        <item quantity="other">Soft alarm %d minutes before</item>
    </plurals>

    <plurals name="snooze">
        <item quantity="one">Maximum snooze time: %d minute</item>
        <item quantity="other">Maximum snooze time: %d minutes</item>
    </plurals>

    <plurals name="next_alarm">
        <item quantity="one">Alarm in %d day</item>
        <item quantity="other">Alarm in %d days</item>
    </plurals>

    <plurals name="next_alarm_within_hour">
        <item quantity="one">Alarm in %d m</item>
        <item quantity="other">Alarm in %d m</item>
    </plurals>

    <plurals name="n_hours_plural">
        <item quantity="one">%d h</item>
        <item quantity="other">%d h</item>
    </plurals>

    <plurals name="n_minutes_plural">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="n_minutes_plural_short">
        <item quantity="one">%d m</item>
        <item quantity="other">%d m</item>
    </plurals>

    <plurals name="alarm_turn_off_prompt">
        <item quantity="one">Drag circles to their places. Or shake device <big>%d</big> time</item>
        <item quantity="other">Drag circles to their places. Or shake device <big>%d</big> times</item>
    </plurals>
    <string name="add_bookmark">Add bookmark</string>
    <string name="show_bookmarks">Show bookmarks</string>

</resources>
