<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">


    <com.mecong.tenderalarm.sleep_assistant.HourglassComponent
        android:id="@+id/sliderSleepTime"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/tr1_background"
        app:color="#424040"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/sliderVolume"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:max="60" />

    <com.mecong.tenderalarm.sleep_assistant.HourglassComponent
        android:id="@+id/sliderVolume"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/tr1_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintDimensionRatio="0.5625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sliderSleepTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:max="100"
        app:mcolor="#C3C50F0F" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/sliderSleepTime"
        app:layout_constraintStart_toStartOf="@+id/sliderSleepTime" />

    <TextView
        android:id="@+id/textViewMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor3"
        app:layout_constraintEnd_toEndOf="@+id/sliderSleepTime"
        app:layout_constraintStart_toStartOf="@+id/sliderSleepTime"
        app:layout_constraintTop_toBottomOf="@+id/sliderSleepTime"
        tools:text="38 minutes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/volume"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/sliderVolume"
        app:layout_constraintStart_toStartOf="@+id/sliderVolume" />

    <TextView
        android:id="@+id/textViewVolumePercent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/volume_percent"
        android:textColor="@color/textColor3"
        app:layout_constraintEnd_toEndOf="@+id/sliderVolume"
        app:layout_constraintStart_toStartOf="@+id/sliderVolume"
        app:layout_constraintTop_toBottomOf="@+id/sliderVolume" />

    <com.mecong.tenderalarm.sleep_assistant.PlayPositionTextView
        android:id="@+id/nowPlayingText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_border_playbar"
        android:clickable="true"
        android:ellipsize="start"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/textColor3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:tabMaxWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingText"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabPaddingEnd="4dp"
        app:tabPaddingStart="4dp"
        app:tabRippleColor="@null"
        app:tabTextColor="#555353">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/local_media" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/online_media" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/noises" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_back_round_fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/playerTime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_border_playbar"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="05:11" />


    <TextView
        android:id="@+id/playerTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_border_playbar"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="14:22" />

</androidx.constraintlayout.widget.ConstraintLayout>